--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:js": "eslint --cache --ext .js,.jsx .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "concurrently \"yarn lint:js\" \"yarn lint:scss\" \"yarn flow\"",
-    "test": "jest --config ./jest/jest-config.js",
+    "test": "export TZ=\"Europe/London\";jest --config ./jest/jest-config.js",
     "test:coverage": "jest --coverage --config ./jest/jest-config.js",
     "test:watch": "jest --watch --config ./jest/jest-config.js"
   },
@@ -110,7 +110,7 @@
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
     "lost": "8.3.1",
-    "postcss-pxtorem": "6.0.0",
+    "postcss-pxtorem": "5.1.1",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "sass": "^1.32.8",
